--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ name = "fun"
 version = "0.0.3"
 authors = ["J/A <archer884@gmail.com>"]
 
+[lib]
+
+name = "icndb"
+path = "src/lib.rs"
+
 [dependencies]
 
 hyper = "*"
